--- a/FlashCard/FlashCard.csproj
+++ b/FlashCard/FlashCard.csproj
@@ -83,6 +83,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\ReadFromFile.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\Synonym.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -93,6 +97,9 @@
     <Compile Include="Model\Word.cs" />
     <Compile Include="Pages\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\ReadFromFile.xaml.cs">
+      <DependentUpon>ReadFromFile.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\Synonym.xaml.cs">
       <DependentUpon>Synonym.xaml</DependentUpon>
